--- a/css/commons.css
+++ b/css/commons.css
@@ -15,7 +15,7 @@ body{
 
     position: relative;
     width : 95%;
-    height : 800px;
+    min-height : 800px;
     background : #fff;
     border-radius : 10px;
     box-shadow : 0 0 30px rgba(0, 0, 0, .2);
