--- a/css/docteams.css
+++ b/css/docteams.css
@@ -15,6 +15,63 @@
     }
 }
 .selected{
-    background-color: white;
+    background-color: #FBFBF4;
     border-top-right-radius: 20px;
+}
+.teamdata{
+    display: flex;
+    padding: 30px;
+    background-color: #FBFBF4;
+    gap: 10px;
+}
+.teaminfo{
+    padding: 20px 20px 20px 40px;
+    background-color: white;
+}
+.teaminfo #bio{
+    max-width: 90%;
+    margin-bottom: 40px;
+}
+.reqsAndGrade .reqs{
+    color: #133E87;
+    font-weight: bold;
+    h3, li{
+        margin-bottom: 10px;
+    }
+}
+
+.teamdata .teaminfo .logoAndName{
+    display: flex;
+    gap: 200px;
+    margin-bottom: 20px;
+}
+.teamdata .teaminfo .logoAndName .imagebox img{
+    width: 90px;
+}
+.grades{
+    background-color: white;
+    padding: 20px;
+}
+.grades hr{
+    background-color: #2DCC9F;
+    height: 2px;
+    margin-top: 10px;
+}
+.student, #teamLeader{
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    border-bottom: solid 1px #2DCC9F;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    justify-self: center;
+    gap: 65px;
+    width: 350px;
+    margin-top: 10px;
+}
+#teamLeader {
+    width: 80%;
+    text-align: center;
+    gap: 25%;
+    margin-top: 30px;
 }
