--- a/css/DoctorProfile.css
+++ b/css/DoctorProfile.css
@@ -248,3 +248,66 @@
 
 }
 
+
+
+
+
+/* 🔲 Modal Styles */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-content {
+    background: white;
+    padding: 30px;
+    border-radius: 12px;
+    width: 55%;
+    /* max-width: 500px;*/
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+    font-size: 18px;
+    color: red;
+    }
+
+
+
+.Notification-btn {
+        border: none;
+        background-color: white;
+    }
+
+
+    .remove_btn {
+        font-size: 14px;
+        background-color: transparent;
+        color: #dc3545;
+        border: none;
+        cursor: pointer;
+        padding: 6px 10px;
+        border-radius: 6px;
+        transition: 0.2s;
+        margin-right: 10px; /* خليه بعد المحتوى */
+    }
+    
+    .remove_btn:hover{
+        background-color: #dc3545;
+        color: #ffffff;
+    }
+
+    
