--- a/css/DoctorProfile.css
+++ b/css/DoctorProfile.css
@@ -36,7 +36,7 @@
     gap: 20px;
     flex-wrap: wrap;
     .tmp{gap:1;}
-    .tracks, .major{
+    .TeamsNum, .major{
 
         font-weight: 200;
         margin: 0px 10px 0px 10px ;
@@ -128,12 +128,11 @@
     }
 }
 
-.tracks{
-    display: flex
-    ;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+.TeamsNum{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -249,6 +248,20 @@
 }
 
 
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+}
+.Notification-btn {
+    position: relative;
+}
 
 
 
@@ -293,21 +306,36 @@
     }
 
 
-    .remove_btn {
-        font-size: 14px;
-        background-color: transparent;
-        color: #dc3545;
-        border: none;
-        cursor: pointer;
-        padding: 6px 10px;
-        border-radius: 6px;
-        transition: 0.2s;
-        margin-right: 10px; /* خليه بعد المحتوى */
-    }
-    
-    .remove_btn:hover{
-        background-color: #dc3545;
-        color: #ffffff;
-    }
+.remove_btn {
+    font-size: 25px;
+    background-color: transparent;
+    color: #dc3545;
+    border: none;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 6px;
+    transition: 0.2s;
+    margin-right: 10px; /* خليه بعد المحتوى */
+}
 
-    
+.remove_btn:hover{
+    background-color: #dc3545;
+    color: #ffffff;
+}
+
+.approve_btn{
+    font-size: 25px;
+    background-color: transparent;
+    color: #0895ed;
+    border: none;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 6px;
+    transition: 0.2s;
+    margin-right: 10px;  
+}
+
+.approve_btn:hover{
+    background-color: #0895ed;
+    color: #ffffff;
+}
