--- a/css/studentprofile.css
+++ b/css/studentprofile.css
@@ -1,7 +1,7 @@
 .profile, .seminars{
-    margin: 40px 50px;
+    margin: 30px 30px;
     display: flex;
-    gap: 20px;
+    gap: 60px;
 }
 .profile .info{
     background-color: white;
@@ -11,9 +11,29 @@
 }
 .profile .info .personalInfo{
     display: flex;
-    gap: 10px;
+    flex-direction: row;
+    gap: 20px;
     font-weight: bold;
+    align-items: center;
 }
+
+.id{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.bio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 15px;
+    margin: 5px;
+    font-weight: 100;
+}
+
 .profile .info .personalInfo .identity p{
     margin-bottom: 0;
     margin-top: 5px;
@@ -75,15 +95,25 @@
         .doctor{
             display: flex;
             gap: 10px;
+            align-items: center;
         }
     }
 }
+
+.seminars{
+    flex-direction: column;
+    flex-wrap: wrap;
+    box-shadow: 0 0 10px rgba(0,0,0,0.08);
+    padding: 20px;
+    border-radius: 40px;
+}
 .seminars .weeklyseminar{
-    background-color: white;
+    width: 400px;
+    background-color: #9bd8ff;
     padding: 25px;
     color: #133E87;
     border-radius: 10px;
-    border: solid 0.5px #9BD8FF;
+    border: solid 0.5px #dc3545;s
     .tmp{gap:1;}
     h2{
         text-align: center;
@@ -91,11 +121,208 @@
     }
 }
 .seminars .weeklyseminar .date{
-    background-color: #9BD8FF;
+    color:#dc3545;
+    background-color: #ffffff;
     border-radius: 10px;
-    padding: 10px 20px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
     margin-bottom: 30px;
+}
+.date hr{
+    width: 0px;
+    height: 30px;
+    color: rgb(0 0 0 / 39%);
+    text-decoration: none;
+    border-style: dashed;
+    border-width: 1px;
+}
+
+.imgbox{
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 100px;
+    .tmp{gap: 1;}
+    img{
+
+        width: 100px;
+        height: 100px;
+        border-radius: 100px;
+
+    }
+}
+
+
+.Grads{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 10px 0px 10px ;
+    min-width: 35%;
+    max-width: 50%;
+    padding: 20px;
+    border-radius: 10px;
+    border: solid 0.5px #9BD8FF;
+    color: #133E87;
+    .tmp{gap:1;}
+    ul{
+        white-space: nowrap;
+        font-weight: bold;
+        color: #133E87;
+    }
+}
+
+
+
+.num{
+    display: flex;
+    padding: 20px;
+    background-color: #9CD49F;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+
+    .tmp{gap: 1;}
+    p{
+        font-weight: 500;
+        font-size: 26px;
+        text-align: center;
+        color: #fff;
+    
+    }
+}
+.num label{
+    display: flex;
+    width: 100px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+hr.vertical{
+    width: 0px;
+    height: 100%;
+    color: rgb(0 0 0 / 39%);
+    text-decoration: none;
+    border-style: dashed;
+    border-width: 1px;
+}
+
+
+
+.team-card{
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border-bottom: solid 1px #9cd4a0;
+    box-shadow: 5px 15px 8px -11px #8080807d;
+}
+.team-logo img{
+    width: 80px;
+    height: 80px;
+
+}
+
+
+
+
+.notification-count {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+}
+.Notification-btn {
+    position: relative;
+}
+.fa-bell{
+    font-size: 30px;
+}
+
+
+/* 🔲 Modal Styles */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-content {
+    background: white;
+    padding: 30px;
+    border-radius: 12px;
+    width: 55%;
+    /* max-width: 500px;*/
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+    font-size: 18px;
+    color: red;
+    }
+
+
+
+.Notification-btn {
+        border: none;
+        background-color: white;
+    }
+
+
+.remove_btn {
+    font-size: 25px;
+    background-color: transparent;
+    color: #dc3545;
+    border: none;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 6px;
+    transition: 0.2s;
+    margin-right: 10px; /* خليه بعد المحتوى */
+}
+
+.remove_btn:hover{
+    background-color: #dc3545;
+    color: #ffffff;
+}
+
+.approve_btn{
+    font-size: 25px;
+    background-color: transparent;
+    color: #0895ed;
+    border: none;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 6px;
+    transition: 0.2s;
+    margin-right: 10px;  
+}
+
+.approve_btn:hover{
+    background-color: #0895ed;
+    color: #ffffff;
 }
