--- a/css/studentprofile.css
+++ b/css/studentprofile.css
@@ -112,12 +112,24 @@
     background-color: #9bd8ff;
     padding: 25px;
     color: #133E87;
-    border-radius: 10px;
+    border-radius: 20px;
     border: solid 0.5px #dc3545;s
     .tmp{gap:1;}
     h2{
         text-align: center;
         margin-bottom: 30px;
+    }
+    #studentSeminarGrade{
+        margin: 15px 0% 0 34%;
+        font-size: 13px;
+        padding: 10px 30px;
+        letter-spacing: 2px;
+        color: white;
+        background-color: #9cd49f;
+        border: 0.5px solid;
+        border-radius: 6px;
+        align-self: center;
+        cursor: pointer;
     }
 }
 .seminars .weeklyseminar .date{
